Update ThreadInput component and fix TypeScript errors
- Refactored ThreadInput to use draft-based approach instead of topic-based
- Added refine prompt functionality
- Updated form fields and validation
- Fixed SelectValue TypeScript errors
- Added new API routes for auth and posting
- Updated database schema and migrations
- Enhanced UI components and styling

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ OPENAI_API_KEY=your_openai_api_key_here
 STRIPE_SECRET_KEY=your_stripe_secret_key_here
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
+X_CLIENT_ID=your_x_client_id_here
+X_CLIENT_SECRET=your_x_client_secret_here
+X_REDIRECT_URI=http://localhost:3000/api/auth/callback
+NEXT_PUBLIC_X_CLIENT_ID=your_x_client_id_here
+NEXT_PUBLIC_X_REDIRECT_URI=http://localhost:3000/api/auth/callback
