--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@stripe/stripe-js": "^1.54.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.44.2",
-    "@stripe/stripe-js": "^1.54.0",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
@@ -21,10 +23,12 @@
     "postcss": "^8.4.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.4.1",
     "stripe": "^14.23.1",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
