--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.27.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-switch": "^1.2.6",
     "@stripe/stripe-js": "^1.54.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.44.2",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.1.0",
+    "i18n-js": "^4.5.1",
     "lucide-react": "^0.363.0",
     "next": "^14.2.4",
-    "openai": "^4.52.0",
+    "openai": "^4.104.0",
     "postcss": "^8.4.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
